# qemu

./: BUILD.bazel  CMakeLists.txt  MAINTAINERS  README.MD  entitlements.plist  hmp-commands-info.hx  hmp-commands.hx  mac.source.properties  meson.build  qemu-darwin-shim.jsonc  qemu-linux-shim.jsonc  qemu-options.hx  qemu-windows-shim.jsonc  source.properties  vl.c  win.source.properties
accel/tcg/: tcg-accel-ops.c
android-qemu2-glue/: main.cpp  qemu-console-factory.cpp  qemu-setup.cpp  qemu-user-event-agent-impl.c  qemu-vm-operations-impl.cpp
android-qemu2-glue/emulation/: virtio-wifi.cpp
android-qemu2-glue/netsim/: netsim.h  qemu-packet-stream-agent-impl.cpp
android/android-emu/: android-emu.cmake
android/android-emugl/: CMakeLists.txt
android/data/: advancedFeatures.ini
android/emulator/: CMakeLists.txt  main-emulator.cpp
android/emulator-check/: CMakeLists.txt  main-emulator-check.cpp
chardev/: char.c  trace-events
docs/: conf.py
docs/specs/: index.rst
gdbstub/: gdbstub.c
google/drivers/: meson.build
google/drivers/hw/acpi/: goldfish_acpi.c
google/drivers/hw/arm/: goldfish_arm_board.c  goldfish_arm_board.h
google/drivers/hw/i386/: goldfish_board.c
google/system/: aemu_main.cpp
hw/: Kconfig  meson.build
hw/adc/: npcm7xx_adc.c
hw/arm/: Kconfig  aspeed.c  meson.build  (+8 more)
linux-user/: elfload.c  mmap.c  syscall.c
migration/: savevm.c
net/: checksum.c  net.c  slirp.c  trace-events
pc-bios/: meson.build
platform/: BUILD.darwin-arm64  BUILD.linux-x86_64  BUILD.windows-amd64
qom/: object.c
ui/: input.c
util/: qemu-sockets.c
(+238 files in other folders)
